--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.2.4"
 edition = "2024"
 
 [dependencies]
-reqwest     = { version = "0.12.20", default-features = false, features = ["blocking", "rustls-tls"] }
+reqwest     = { version = "0.12.20", default-features = false, features = ["blocking", "rustls-tls", "json"] }
 serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 once_cell = "1.18.0"
 rust-embed = { version = "8", features = ["include-exclude"] }
 rand = "0.9.1"
