--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "geektools"
 version = "0.2.5"
 edition = "2024"
+repository = "PeterFujiyu/geektools"
 
 [dependencies]
 reqwest     = { version = "0.12.20", default-features = false, features = ["blocking", "rustls-tls", "json"] }
@@ -10,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 once_cell = "1.18.0"
 rust-embed = { version = "8", features = ["include-exclude"] }
 rand = "0.9.1"
+toml = "0.8.23"
