update release workflow to include SBOM generation, artifact hashing, improved permissions, SLSA provenance, and bump version to 0.2.8

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,6 +121,7 @@ jobs:
   provenance:
     needs: release
     permissions:
+      actions: read
       id-token: write
       contents: write
       attestations: write
