--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 once_cell = "1.18.0"
 rust-embed = { version = "8", features = ["include-exclude"] }
 rand = "0.9.1"
+chrono = { version = "0.4", features = ["clock"] }
