--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,6 +84,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add Buildtag.md
+          git pull --rebase origin master
           git commit -m "Update buildtag from GitHub Action" || echo "No changes"
           git push
 
