--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ once_cell = "1.18.0"
 rust-embed = { version = "8", features = ["include-exclude"] }
 rand = "0.9.1"
 chrono = { version = "0.4", features = ["clock"] }
+flate2 = "1.1.2"
+tar = "0.4.44"
