--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
     branches: [ master ]            # 自动 → Pre-release
     paths-ignore:
       - '**/Buildtag.md'
+      - '**/README.md'
   pull_request:
     branches: [ master ]
   workflow_dispatch:                # 手动可升正式
