--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "geektools"
-version = "0.6.0"
+version = "0.6.1"
 edition = "2024"
 repository = "PeterFujiyu/geektools"
 
@@ -15,3 +15,11 @@ chrono = { version = "0.4", features = ["clock"] }
 flate2 = "1.1.2"
 tar = "0.4.44"
 urlencoding = "2.1"
+thiserror = "1.0"
+anyhow = "1.0"
+log = "0.4"
+env_logger = "0.10"
+url = "2.4"
+
+[dev-dependencies]
+tempfile = "3.20.0"
