--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,37 @@
 [package]
 name = "geektools"
-version = "0.6.1"
+version = "0.6.2"
 edition = "2024"
 repository = "PeterFujiyu/geektools"
 
 [dependencies]
-reqwest     = { version = "0.12.20", default-features = false, features = ["blocking", "rustls-tls", "json"] }
+reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 once_cell = "1.18.0"
 rust-embed = { version = "8", features = ["include-exclude"] }
-rand = "0.9.1"
-chrono = { version = "0.4", features = ["clock"] }
+rand = { version = "0.9.1", features = ["small_rng"] }
+chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
 flate2 = "1.1.2"
 tar = "0.4.44"
 urlencoding = "2.1"
 thiserror = "1.0"
 anyhow = "1.0"
 log = "0.4"
-env_logger = "0.10"
+env_logger = { version = "0.10", optional = true }
 url = "2.4"
+
+[features]
+default = ["network", "logging"]
+network = ["reqwest"]
+logging = ["env_logger"]
 
 [dev-dependencies]
 tempfile = "3.20.0"
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
+opt-level = "z"
